<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/titleLoginTextView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="42sp"
            android:text="@string/login_welcome"
            android:gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="150dp"/>

        <EditText
            android:id="@+id/userNameLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_margin="16dp"
            android:autofillHints="Please enter username"
            android:gravity="center"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:autofillHints="Please enter password"
            android:gravity="center"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:text="@string/login"
            android:textSize="32sp"
            app:backgroundTint="@color/purple_500"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/create_an_account"
            app:backgroundTint="@color/purple_500"
            android:textSize="20sp"
            android:layout_margin="16dp"/>

    </LinearLayout>

</ScrollView>